--- a/index.html
+++ b/index.html
@@ -12,17 +12,13 @@
 
 <body>
     <div class="container">
-        <img id="title-image" src="assets/images/page-title.png" alt="Animal Word Guess Game" />
+        <img id="title-image" src="assets/images/hangman.png" alt="Animal Word Guess Game" width="80%"/>
         <div class="row">
-            <div class="col-md-6 gameplay-column">
-                <!-- <img id="youwin-image" src="assets/images/you-win.png" alt="Winning Image" />
-                <img id="gameover-image" src="assets/images/gameover.png" alt="Game Over Image" /> -->
+            <div class="gameplay-column">
                 <h2 id="pressKeyTryAgain">Press Any Key to Try Again!</h2>
             </div>
-            <div class="col-md-6 gameplay-column">
+            <div class="gameplay-column">
                 <h2>Press Any Key to Get Started!</h2>
-                <!-- <h4>Losses</h4>
-                <h4 id="totalLosses"></h4> -->
                 <h2>Current Word</h2>
                 <h3 id="currentWord"></h3>
                 <h4>Guesses Remaining</h4>
