--- a/index.html
+++ b/index.html
@@ -3,30 +3,97 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta name="viewport"
+        content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Word Guess Game!</title>
     <link rel="stylesheet" href="assets/css/stylesheet.css" />
     <script src="assets/javascript/game.js" type="text/javascript"></script>
+
+    <!-- google fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Gugi|Open+Sans" rel="stylesheet">
+
+    <!-- bootstrap -->
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" crossorigin="anonymous">
+    </script>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+        crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
 </head>
 
 <body>
-    <div class="container">
-        <img id="title-image" src="assets/images/hangman.png" alt="Animal Word Guess Game" width="80%"/>
+    <div class="container rounded">
         <div class="row">
-            <div class="gameplay-column">
+            <div class="col-sm-12">
+                <p class="hangmanTitle">HANGMAN</p>
+                <p class="lead mt-0">Zoo Animal Hangman Game</p>
+            </div>
+        </div>
+        <div class="row">
+                <div class="col-lg-12">
+                    <div id="pressKeyTryAgain" class="alert alert-success mx-auto" role="alert" style="width: 70%">
+                        <p class="start-alert-text">Press Any Key to Play Again!</p>
+                    </div>
+                </div>
+            </div>
+        <!-- <img id="title-image" src="assets/images/hangman.png" alt="Animal Word Guess Game" width="80%" /> -->
+        <!-- <div class="row">
+            <div class="gameplay-column col-md-12">
                 <h2 id="pressKeyTryAgain">Press Any Key to Try Again!</h2>
             </div>
-            <div class="gameplay-column">
-                <h2>Press Any Key to Get Started!</h2>
-                <h2>Current Word</h2>
-                <h3 id="currentWord"></h3>
-                <h4>Guesses Remaining</h4>
-                <h6 id="remainingGuesses"></h6>
-                <h4>Letters Guessed</h4>
-                <h3 id="guessedLetters"></h3>
-                <h4>Wins</h4>
-                <h5 id="totalWins"></h5>
+        </div> -->
+        <div class="row">
+            <div class="gameplay-column col-md-12">
+                <!-- <div class="card">
+                    <div class="card-header">
+                        Current Word
+                    </div>
+                    <div class="card-body">
+                        <h5 class="card-title" id="currentWord"></h5>
+                    </div>
+                </div> -->
+
+                <div class="jumbotron">
+                    <h2 class="display-3">Current Word</h2>
+                    <br>
+                    <p class="lead" id="currentWord"></p>
+                </div>
+
+                <!-- <ul class="list-group list-group-flush">
+                    <li class="list-group-item">Current Word</li>
+                <li class="list-group-item" id="currentWord"></li>
+                    <li class="list-group-item">Guesses Remaining</li>
+                    <li class="list-group-item" id="remainingGuesses"></li>
+                    <li class="list-group-item">Letters Guessed</li>
+                    <li class="list-group-item" id="guessedLetters"></li>
+                    <li class="list-group-item">Wins</li>
+                    <li class="list-group-item" id="totalWins"></li>
+                </ul> -->
+
+                <!-- new card group -->
+                <div class="card-group m-3">
+                    <div class="card">
+                        <div class="card-body">
+                            <h3 class="card-title">Guesses Remaining</h3>
+                            <hr style="width: 75%;">
+                            <p class="card-text p-3" id="remainingGuesses"></p>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="card-body">
+                            <h3 class="card-title">Letters Guessed</h3>
+                            <hr style="width: 75%;">
+                            <h4 class="card-text p-3" id="guessedLetters"></h4>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="card-body">
+                            <h3 class="card-title">Wins</h3>
+                            <hr style="width: 75%;">
+                            <p class="card-text p-3" id="totalWins"></p>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
@@ -39,5 +106,3 @@
 </body>
 
 </html>
-
- 
