--- a/index.html
+++ b/index.html
@@ -23,19 +23,31 @@
 
 <body>
     <div class="container rounded">
+        <!-- <div class="row">
+            <div class="col-sm-12"> -->
         <div class="row">
-            <div class="col-sm-12">
+            <div class="col-sm-3">
+                <img class="image-fluid" src="assets/images/geo-bear-hm.jpg" alt="Geometric Bear" width="100%" />
+            </div>
+            <!-- </div> -->
+            <!-- <img class="image-fluid" src="assets/images/geo-bear-hm.jpg" alt="Geometric Bear" /> -->
+            <div class="col-sm-6">
                 <p class="hangmanTitle">HANGMAN</p>
-                <p class="lead mt-0">Zoo Animal Hangman Game</p>
+            </div>
+            <div class="col-sm-3">
+                <img class="image-fluid" src="assets/images/geo-turtle.jpg" alt="Geometric Turtle" width="70%" />
             </div>
         </div>
+        <p class="lead mt-0">Zoo Animal Hangman Game</p>
+        <!-- </div> -->
+        <!-- </div> -->
         <div class="row">
-                <div class="col-lg-12">
-                    <div id="pressKeyTryAgain" class="alert alert-success mx-auto" role="alert" style="width: 70%">
-                        <p class="start-alert-text">Press Any Key to Play Again!</p>
-                    </div>
+            <div class="col-lg-12">
+                <div id="pressKeyTryAgain" class="alert alert-success mx-auto" role="alert" style="width: 70%">
+                    <p class="start-alert-text">Press Any Key to Play Again!</p>
                 </div>
             </div>
+        </div>
         <!-- <img id="title-image" src="assets/images/hangman.png" alt="Animal Word Guess Game" width="80%" /> -->
         <!-- <div class="row">
             <div class="gameplay-column col-md-12">
